[package]
name = "rlox"
version = "0.1.0"
edition = "2021"
authors = ["Noel Espino Córdova <hi@ednoesco.com>"]
description = "Rust implemenntation of the Lox language, covered on Crafting Interpreters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
