[package]
name = "rlox"
version = "0.2.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["Noel Espino Córdova <hi@ednoesco.com>"]
description = "Rust implementation of the Lox language, covered on Crafting Interpreters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
